--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -18,7 +18,7 @@
       <h1>
         <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
       </h1>
-      <!-- change -->
+      <!-- modal -->
       <div class="col-1 admin-btn">
         <!-- edit -modal trigger button -->
         <button
@@ -29,22 +29,12 @@
         >
           <i class="fa-solid fa-wand-magic-sparkles"></i>
         </button>
-    
-    
-        <!--del- modal trigger button -->
-    
-        <button type="button" class="btn del-btn"data-bs-toggle="modal"
-        data-bs-target="#delete">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
       </div>
-
+      <!-- ------- -->
     </div>
 
     <!-- ICON -->
-
   </div>
 </section>
 
 <app-editpfp></app-editpfp>
-<app-delete></app-delete>
