--- a/portfolio-front/src/app/components/footer/footer.component.css
+++ b/portfolio-front/src/app/components/footer/footer.component.css
@@ -1,8 +1,12 @@
 /* completeeeeeeeeeee */
 .btn a{
     text-decoration: none;
+    color: var(--clr-light)
 
 }
 .btn{
     text-decoration: none;
+}
+.btn a:hover{ 
+    color:var(--clr-accent)
 }
