dinamic front end

--- a/portfolio-front/src/app/components/education/education.component.html
+++ b/portfolio-front/src/app/components/education/education.component.html
@@ -14,13 +14,14 @@
     <!-- --- -->
   </h2>
   <div class="education">
-    <div class="course">
+    <!-- bucle? -->
+    <div class="course" *ngFor="let course of education">
       <i class="fa-solid fa-bookmark icon-body"></i>
       <h3 class="titulo">
-        NOMBRE de la carrira, titulo o certificacion
+        {{course.title}}
 
-        <p class="institution">nombre de la institucion</p>
-        <p class="project__date">fecha o duracion de la educacion</p>
+        <p class="institution">{{course.institution}}</p>
+        <p class="project__date">{{course.start}} / {{course.end}} </p>
 
       </h3>
       <!-- modal -->
@@ -48,47 +49,7 @@
       </div>
       <!-- ------- -->
     </div>
-
-    <!-- titulo 1 -->
-
-
-    <div class="course">
-      <i class="fa-solid fa-bookmark icon-body"></i>
-      <h3 class="titulo">
-        NOMBRE de la carrira, titulo o certificacion
-
-        <p class="institution">nombre de la institucion</p>
-        <p class="project__date">fecha o duracion de la educacion</p>
-        <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
-      </h3>
-      <div class="col-1 admin-btn">
-        <button type="button" class="btn edit-btn">
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
-        </button>
-        <button type="button" class="btn del-btn">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
-      </div>
-    </div>
-    <!-- titulo 1 -->
-    <div class="course">
-      <i class="fa-solid fa-bookmark icon-body"></i>
-      <h3 class="titulo">
-        NOMBRE de la carrira, titulo o certificacion
-
-        <p class="institution">nombre de la institucion</p>
-        <p class="project__date">fecha o duracion de la educacion</p>
-      </h3>
-      <div class="col-1 admin-btn">
-        <button type="button" class="btn edit-btn">
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
-        </button>
-        <button type="button" class="btn del-btn">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
-      </div>
-    </div>
-    <!-- titulo 1 -->
+    <!-- fin -->
   </div>
 
   <div class="my-education__footer">
