--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <section class="footer">
   <button class="btn">
     <a href="#return"> &lt; back to top &gt; </a>
+  <p>AGREGAR LICENCIA ETC</p>
   </button>
 </section>
