--- a/portfolio-front/src/app/components/skills/skills.component.html
+++ b/portfolio-front/src/app/components/skills/skills.component.html
@@ -17,8 +17,11 @@
 
   <div class="skills">
     <!-- skill 1 -->
-    <div class="skill">
-      <div class="skill__percentage"></div>
+    <div class="skill" *ngFor="let skill of skills">
+      <div class="skill__percentage">
+        
+      </div>
+
       <!-- modal -->
       <div class="col-1 admin-btn">
         <!-- edit -modal trigger button -->
