--- a/portfolio-front/src/app/modals/delete/delete.component.html
+++ b/portfolio-front/src/app/modals/delete/delete.component.html
@@ -1,3 +1,6 @@
+
+
+<form>
 <div class="modal" tabindex="-1" id="delete">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -20,3 +23,4 @@
     </div>
   </div>
 </div>
+</form>
