--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -24,12 +24,18 @@
           aria-describedby="workplace"
         />
       </div>
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="titulo del trabajo"
+          aria-label="job-title"
+          aria-describedby="job-title"
+        />
+      </div>
 
       <div class="input-group">
-        <span class="input-group-text"
-          >título del puesto,<br />
-          descripcion del trabajo</span
-        >
+        <span class="input-group-text">descripcion del trabajo</span>
         <textarea class="form-control" aria-label="With textarea"></textarea>
       </div>
 
