--- a/portfolio-front/src/app/components/experience/experience.component.html
+++ b/portfolio-front/src/app/components/experience/experience.component.html
@@ -13,14 +13,16 @@
       <!-- --- -->
   </h2>
   <div class="experience">
-    <div class="job">
-      <h3>
-        <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 1
-      </h3>
 
-      <p>titulo del puesto // UN PIPE
-        descripcion trabajo 1 // OTRO PIPE </p>
-      <p class="project__date">fecha inicio / fehca fin</p>
+    
+    <div class="job" *ngFor="let job of experience">
+      <h3>
+        <span><i class="fa-solid fa-at icon-body"></i></span> {{job.place}}
+      </h3>
+      <h4>{{job.title}}</h4>
+
+      <p>{{job.description}}</p>
+      <p class="project__date">{{job.start}} / {{job.end}}</p>
 
       <!-- modal -->
       <div class="col-1 admin-btn">
@@ -47,27 +49,8 @@
       </div>
       <!-- ------- -->
     </div>
+<!-- ----------------- -->
 
-    <!-- trabajo 1-->
-
-    <div class="job">
-      <h3>
-        <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 2
-      </h3>
-      <p>descripcion trabajo 2</p>
-      <p class="project__date">fecha trabajo 2</p>
-    </div>
-    <!-- trabajo 2-->
-
-    <div class="job">
-      <h3>
-        <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 3
-      </h3>
-      <p>descripcion trabajo 3</p>
-      <p class="project__date">fecha trabajo 3</p>
-    </div>
-
-    <!-- trabajo 3-->
   </div>
   <div class="my-experience__footer">
     <h2>&lt; / <i class="fa-solid fa-briefcase icon-body"></i> &gt;</h2>
