--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -17,30 +17,51 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"></li>
       </ul>
+
       <div
         class="d-grid gap-2 d-md-flex justify-content-center flex-row-reverse"
       >
+
         <!-- login button component -->
 
-        <!-- make it appear and disappear
-        <app-login *ngIf="!visible"></app-login>
+        <!-- make it appear and disappear -->
+        <!-- <app-login *ngIf="!visible"></app-login>
         <app-logout *ngIf="visible"></app-logout> -->
-        
         <app-login></app-login>
-        <app-logout></app-logout>
-
-        <!-- ---------------- -->
-
+          <app-logout></app-logout>
         <!-- social links -->
-        <button class="btn btn-primary" type="button">
-          <a
-            style="color: #009188; text-decoration: none; text-align: center"
-            href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
-            alt="linkedin"
-            target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </button>
+
+
+          <button class="btn btn-primary" type="button">
+            <a
+              style="color: #009188; text-decoration: none; text-align: center"
+              href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
+              alt="linkedin"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </button>
+
+
+        <!-- <div *ngFor="let social of socials">
+
+          <button class="btn btn-primary" type="button">
+            <a
+              style="color: #009188; text-decoration: none; text-align: center"
+              [href]="social.url"
+              [alt]="social.alt"
+              target="_blank"
+              ><i [ngClass]="social.icon"></i
+            ></a>
+          </button>
+        </div> -->
+
+
+
+
+
+
+      <!-- fin socials -->
         <button class="btn btn btn-primary" type="button">
           <a
             style="color: #009188; text-decoration: none; text-align: center"
