--- a/portfolio-front/src/app/components/banner/banner.component.html
+++ b/portfolio-front/src/app/components/banner/banner.component.html
@@ -1,6 +1,7 @@
 <section class="banner p-0">
   <div>
     <img class="card-img" src="/assets/img/a4.png" alt="banner" />
+    <!-- [src]="banner"  -->
   </div>
   <div class="col-1 admin-btn">
     <!-- edit -modal trigger button -->
@@ -13,11 +14,14 @@
       <i class="fa-solid fa-wand-magic-sparkles"></i>
     </button>
 
-
     <!--del- modal trigger button -->
 
-    <button type="button" class="btn del-btn"data-bs-toggle="modal"
-    data-bs-target="#delete">
+    <button
+      type="button"
+      class="btn del-btn"
+      data-bs-toggle="modal"
+      data-bs-target="#delete"
+    >
       <i class="fa-solid fa-trash-can"></i>
     </button>
   </div>
