--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -7,8 +7,7 @@
     <!-- componente de about-me -->
     <div class="col-7 p-1">
       <p class="p-1">
-        ...............................................................................................................
-        ........................................................
+        {{about}}
       </p>
     </div>
 
