--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -3,10 +3,10 @@
   <div class="left">
     <h1 class="section__title section__title--intro">Hola, me llamo</h1>
     <h1 class="section__title section__title--intro">
-      <strong>Hebe Lia Romeu</strong>
+      <strong>{{name}}</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
-      <i> full stack developer junior </i>
+      <i>{{title}}</i>
     </p>
   </div>
   <!-- profile picture -->
@@ -14,6 +14,7 @@
   <!-- right side -->
   <div class="right">
     <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
+    <!-- [src="pfp"] -->
     <div class="right-bottom">
       <h1>
         <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
