--- a/portfolio-front/src/app/components/projects/projects.component.html
+++ b/portfolio-front/src/app/components/projects/projects.component.html
@@ -19,7 +19,7 @@
       <div class="button-icon">
         <h2>
           <i class="fa-regular fa-folder icon-body">
-            <a [href]="project.url" [alt]="project.alt" target="_blank"></a>
+            <a [href]="project.url" alt="link del proyecto" target="_blank"></a>
           </i>
         </h2>
         <!-- modal -->
@@ -52,9 +52,7 @@
         {{ project.title }}
 
         <p>{{ project.description }}</p>
-        <p class="project__date">
-          {{ project.start }} / {{ project.end }}
-        </p>
+        <p class="project__date">{{ project.start }} / {{ project.end }}</p>
       </h3>
     </div>
     <!-- end project -->
