--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -13,8 +13,7 @@
 
   <!-- right side -->
   <div class="right">
-    <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
-    <!-- [src="pfp"] -->
+    <img [src]="pfp" alt="pfp" class="intro__img" />
     <div class="right-bottom">
       <h1>
         <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
