--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -34,7 +34,7 @@
         />
       </div>
 
-      <div class="input-group">
+      <div class="input-group mb-3">
         <span class="input-group-text">descripcion del trabajo</span>
         <textarea class="form-control" aria-label="With textarea"></textarea>
       </div>
