--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -6,9 +6,9 @@
   <div class="about-me__body">
     <!-- componente de about-me -->
     <div class="col-7 p-1">
-      <p class="p-1">
+      <h3><p class="p-1">
         {{about}}
-      </p>
+      </p></h3>
     </div>
 
     <div class="col-1 admin-btn">
