--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -28,33 +28,23 @@
         <!-- <app-login *ngIf="!visible"></app-login>
         <app-logout *ngIf="visible"></app-logout> -->
         <app-login></app-login>
-          <app-logout></app-logout>
+        <app-logout></app-logout>
         <!-- social links -->
 
 
-          <button class="btn btn-primary" type="button">
-            <a
-              style="color: #009188; text-decoration: none; text-align: center"
-              href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
-              alt="linkedin"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </button>
 
-
-        <!-- <div *ngFor="let social of socials">
+ <div *ngFor="let social of socials">
 
           <button class="btn btn-primary" type="button">
             <a
               style="color: #009188; text-decoration: none; text-align: center"
               [href]="social.url"
-              [alt]="social.alt"
+              alt="social.alt"
               target="_blank"
               ><i [ngClass]="social.icon"></i
             ></a>
           </button>
-        </div> -->
+        </div> 
 
 
 
@@ -62,30 +52,7 @@
 
 
       <!-- fin socials -->
-        <button class="btn btn btn-primary" type="button">
-          <a
-            style="color: #009188; text-decoration: none; text-align: center"
-            href="https://github.com/hebelia"
-            target="_blank"
-            ><i class="fa-brands fa-github-alt"></i
-          ></a>
-        </button>
-        <button class="btn btn btn-primary" type="button">
-          <a
-            style="color: #009188; text-decoration: none; text-align: center"
-            href="https://codepen.io/hebelia"
-            target="_blank"
-            ><i class="fa-brands fa-codepen"></i>
-          </a>
-        </button>
-        <button class="btn btn btn-primary" type="button">
-          <a
-            style="color: #009188; text-decoration: none; text-align: center"
-            href="https://www.instagram.com/hebe.lia/"
-            target="_blank"
-            ><i class="fa-brands fa-instagram"></i>
-          </a>
-        </button>
+       
       </div>
     </div>
   </div>
