--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -1,3 +1,5 @@
+
+<form-group></form-group>
 <div class="modal" tabindex="-1" id="editjob">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -70,3 +72,4 @@
     </div>
   </div>
 </div>
+</form-group>
