--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
@@ -63,6 +63,7 @@
                   <div class="center-wrap">
                     <div class="section text-center">
                       <h4 class="mb-4 pb-3">Registrarme</h4>
+                      <!-- campo 1 -->
                       <div class="form-group">
                         <input
                           type="text"
@@ -74,6 +75,7 @@
                         />
                         <i class="input-icon uil uil-user"></i>
                       </div>
+                      <!-- campo 2 -->
                       <div class="form-group mt-2">
                         <input
                           type="email"
@@ -85,6 +87,7 @@
                         />
                         <i class="input-icon uil uil-at"></i>
                       </div>
+                      <!-- campo 3-->
                       <div class="form-group mt-2">
                         <input
                           type="password"
