--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -1,5 +1,5 @@
 
-<form-group></form-group>
+<form>
 <div class="modal" tabindex="-1" id="editjob">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -72,4 +72,4 @@
     </div>
   </div>
 </div>
-</form-group>
+</form>
