--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
@@ -1,16 +1,13 @@
 <!-- review  -->
-
-
-
-
- <div class="section" id="loginModal">
-  <button type="button " class="btn-close btn-close-white" routerLink="/" >
-        
-  </button>
-
+<form class="login-register-form">
+  <div class="section" id="loginModal">
+    <button
+      type="button "
+      class="btn-close btn-close-white"
+      routerLink="/"
+    ></button>
 
     <div class="container">
-
       <div class="row full-height justify-content-center">
         <div class="col-12 text-center align-self-center py-5">
           <div class="section pb-5 pt-5 pt-sm-2 text-center">
@@ -52,13 +49,22 @@
                         />
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="#" class="btn mt-4">Continuar</a>
-                      <p class="mb-0 mt-4 text-center">
+                      <input
+                        class="btn mt-4"
+                        type="submit"
+                        value="Continuar"
+                      /><br />
+
+                      <!-- <a href="#" class="btn mt-4"> Volver al inicio </a> -->
+                      <!-- <p class="mb-0 mt-4 text-center">
                         <a href="#0" class="link">Olvidé mi contraseña</a>
-                      </p>
+            ------ ------------------------- 
+                      </p> -->
                     </div>
                   </div>
                 </div>
+
+                <!--   -->
                 <div class="card-back">
                   <div class="center-wrap">
                     <div class="section text-center">
@@ -99,12 +105,15 @@
                         />
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="#" class="btn mt-4">continuar</a>
-
-                      
+                      <input
+                        class="btn mt-4"
+                        type="submit"
+                        value="Continuar"
+                      /><br />
                     </div>
                   </div>
                 </div>
+                <!-- ------- -->
               </div>
             </div>
           </div>
@@ -112,4 +121,4 @@
       </div>
     </div>
   </div>
-  
+</form>
